--- a/calculator.css
+++ b/calculator.css
@@ -88,3 +88,78 @@ body {
 .btn:last-child:active {
     background-color: rgb(218, 135, 67);
 }
+
+@media only screen and (max-width: 520px) {
+    .calc {
+        border-width: 4px;
+        height: 576px;
+        width: 384px;
+    }
+
+    .output {
+        margin: 4px 16px 0 16px;
+        padding: 0 8px;
+    }
+
+    .calc, .calc-row {
+        gap: 4px;
+    }
+
+    .page-title {
+        font-size: 40px;
+    }
+
+    .output, .btn {
+        font-size: 32px;
+    }
+}
+
+@media only screen and (max-width: 415px) {
+    .calc {
+        border-width: 3px;
+        height: 432px;
+        width: 288px;
+    }
+
+    .output {
+        margin: 3px 12px 0 12px;
+        padding: 0 6px;;
+    }
+
+    .calc, .calc-row {
+        gap: 3px;
+    }
+
+    .page-title {
+        font-size: 30px;
+    }
+
+    .output, .btn {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 310px) {
+    .calc {
+        border-width: 2px;
+        height: 288px;
+        width: 192px;
+    }
+
+    .output {
+        margin: 2px 8px 0 8px;
+        padding: 0 4px;;
+    }
+
+    .calc, .calc-row {
+        gap: 2px;
+    }
+
+    .page-title {
+        font-size: 20px;
+    }
+
+    .output, .btn {
+        font-size: 16px;
+    }
+}
