--- a/src/calculator.css
+++ b/src/calculator.css
@@ -13,7 +13,7 @@ body {
 #container {
     height: 100%;
     width: 100%;
-    background-color: #eee;
+    background-color: #f3f3f3;
     font-family: Verdana, Tahoma, sans-serif;
     display: flex;
     flex-direction: column;
@@ -73,7 +73,18 @@ footer {
     border: 2px solid #bbb;
     border-radius: 25px;
     color: #222;
-    font-size: 37.5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.operation {
+    font-size: 18px;
+}
+
+.result {
+    font-size: 35px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
